@@ -20,13 +20,25 @@ if( $res->count() == 0 ) {
 	echo "<p><em>No teams defined</em></p>\n\n";
 } else {
 	echo "<table>
-	<tr><th>login</th><th>teamname</th><th>cat.</th><th>IP address</th></tr>\n";
+	<tr><th>login</th><th>teamname</th><th>cat.</th><th>host</th></tr>\n";
 	while($row = $res->next()) {
 		echo "<tr><td class=\"teamid\"><a href=\"team.php?id=".urlencode($row['login']).
 			"\">".htmlspecialchars($row['login'])."</a>".
 			"</td><td>".htmlentities($row['name']).
 			"</td><td title=\"".htmlentities($row['catname'])."\">".(int)$row['category'].
-			"</td><td>".htmlspecialchars(@$row['ipaddress']).
+			"</td><td title=\"";
+			if ( @$row['ipaddress'] ) {
+				$host = htmlspecialchars(gethostbyaddr($row['ipaddress']));
+				echo htmlspecialchars($row['ipaddress']);
+				if ( $host == $row['ipaddress'] ) {
+					echo "\">" . printhost($host, TRUE);
+				} else {
+					echo " - $host\">" . printhost($host);
+				}
+				
+			} else {
+				echo "\">-";
+			}
 			"</td></tr>\n";
 	}
 	echo "</table>\n\n";
